# claude-hourglass

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
